force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TestedField__c</fullName>
    <description>Field on the Quote object that should be used in testing this condition.</description>
    <inlineHelpText>Field on the Quote object that should be used in testing this condition.</inlineHelpText>
    <label>Tested Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__TestedObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Group Line Items</fullName>
            </value>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>SBQQ__ProductCode__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Discount__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__MarkupAmount__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__SpecialPriceType__c</fullName>
            </value>
            <value>
                <fullName>fpct_AmountToPercent__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__CustomerDiscount__c</fullName>
            </value>
            <value>
                <fullName>cur_MarkupAmount__c</fullName>
            </value>
            <value>
                <fullName>prc_MarkupRate__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__AdditionalDiscountRate__c</fullName>
            </value>
            <value>
                <fullName>fpct_QuoteLineGroupDiscount__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>