force-app/main/default/objects/SBQQ__ErrorCondition__c/validationRules/SBQQ__FilterCombinationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__FilterCombinationValidation</fullName>
    <active>true</active>
    <description>Validation for the combination of Filter Type Variable.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__FilterType__c, &quot;Variable&quot;), ISBLANK(SBQQ__FilterVariable__c))</errorConditionFormula>
    <errorMessage>A Filter Type of &#39;Variable&#39; must have a Filter Variable.</errorMessage>
</ValidationRule>